--- a/Batch 03 Online/Website (Spotify Clone)/style.css
+++ b/Batch 03 Online/Website (Spotify Clone)/style.css
@@ -260,3 +260,51 @@
     border-radius: 50%;
     width: 100%;
 }
+
+@media (max-width: 425px) {
+
+    .navbar {
+        /* background-color: red; */
+    }
+
+    .right {
+        display: none;
+    }
+
+    .search-bar {
+        display: none !important;
+    }
+
+    .container {
+        flex-direction: column;
+        height: auto;
+    }
+
+    .sidebar {
+        width: 90%;
+    }
+
+    .main-section {
+        margin-left: 0;
+        margin-top: 20px;
+        width: 90%;
+    }
+
+    .songs-container {
+        flex-wrap: wrap;
+    }
+
+    .song {
+        margin: 0;
+        margin-bottom: 20px;
+    }
+
+    .artists-container {
+        flex-wrap: wrap;
+    }
+
+    .artist {
+        margin: 0;
+        margin-bottom: 20px;
+    }
+}
